--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "google-book-search",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3005/",
   "dependencies": {
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
